[package]
name = "rs-xmr-cryp"
version = "0.1.0"
authors = ["TheCharlatan <seb.kung@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.ed25519-dalek]
version = "1.0.0-pre"

[dependencies]
rand_core = "0.5.1"
curve25519-dalek = "2"
sha3 = "0.8.2"
